--- a/packaging/neo4j-desktop/src/main/resources/org/neo4j/desktop/config/neo4j-default.conf
+++ b/packaging/neo4j-desktop/src/main/resources/org/neo4j/desktop/config/neo4j-default.conf
@@ -6,36 +6,31 @@
 dbms.security.auth_enabled=true
 
 #
+# Bolt connector
+#
+dbms.connector.bolt.type=BOLT
+dbms.connector.bolt.enabled=true
+dbms.connector.bolt.tls_level=OPTIONAL
+# To have Bolt accept non-local connections, uncomment this line:
+# dbms.connector.bolt.address=0.0.0.0:7687
+
+#
 # HTTP Connector
 #
-
-# http port (for all data, administrative, and UI access)
-org.neo4j.server.webserver.port=7474
-
-# Let the webserver only listen on the specified IP. Default is localhost (only
-# accept local connections). Uncomment to allow any connection. Please see the
-# security section in the neo4j manual before modifying this.
-#org.neo4j.server.webserver.address=0.0.0.0
-
-#
-# Bolt protocol
-#
-# dbms.connector group configuration
-dbms.connector.0.enabled=true
-dbms.connector.0.tls_level=OPTIONAL
-
-# Uncomment to have Bolt accept non-local connections
-# dbms.connector.0.address=0.0.0.0:7687
+dbms.connector.http.type=HTTP
+dbms.connector.http.enabled=true
+#dbms.connector.http.encryption=NONE
+# To have HTTP accept non-local connections, uncomment this line:
+#dbms.connector.http.address=0.0.0.0:#{default.http.port}
 
 #
 # HTTPS Connector
 #
-
-# Turn https-support on/off
-# org.neo4j.server.webserver.https.enabled=true
-
-# https port (for all data, administrative, and UI access)
-org.neo4j.server.webserver.https.port=7473
+# To enable HTTPS, uncomment these lines:
+#dbms.connector.https.type=HTTP
+#dbms.connector.https.enabled=true
+#dbms.connector.https.encryption=TLS
+#dbms.connector.https.address=localhost:#{default.https.port}
 
 # Certificate location (auto generated if the file does not exist)
 # dbms.security.tls_certificate_file=conf/ssl/snakeoil.cert
@@ -53,7 +48,7 @@ org.neo4j.server.webserver.https.port=7473
 # under the mountpoints specified. Uncomment this line to mount the
 # org.neo4j.examples.server.unmanaged.HelloWorldResource.java from
 # neo4j-examples under /examples/unmanaged, resulting in a final URL of
-# http://localhost:${org.neo4j.webserver.port}/examples/unmanaged/helloworld/{nodeId}
+# http://localhost:${default.http.port}/examples/unmanaged/helloworld/{nodeId}
 #dbms.unmanaged_extension_classes=org.neo4j.examples.server.unmanaged=/examples/unmanaged
 
 #*****************************************************************
