--- a/packaging/standalone/pom.xml
+++ b/packaging/standalone/pom.xml
@@ -46,11 +46,8 @@
     <windows-wrapper.filename>windows-service-wrapper-${windows-wrapper.version}.jar</windows-wrapper.filename>
 
     <!-- conf/neo4j.conf filter properties -->
-    <org.neo4j.server.webserver.http.enabled>true</org.neo4j.server.webserver.http.enabled>
-    <org.neo4j.webserver.port>7474</org.neo4j.webserver.port>
-
-    <org.neo4j.server.webserver.https.enabled>true</org.neo4j.server.webserver.https.enabled>
-    <org.neo4j.webserver.https.port>7473</org.neo4j.webserver.https.port>
+    <default.http.port>7474</default.http.port>
+    <default.https.port>7473</default.https.port>
 
     <dbms.security.tls_certificate_file>conf/ssl/snakeoil.cert</dbms.security.tls_certificate_file>
     <dbms.security.tls_key_file>conf/ssl/snakeoil.key</dbms.security.tls_key_file>
