--- a/packaging/standalone/standalone-community/src/main/distribution/text/community/conf/neo4j.conf
+++ b/packaging/standalone/standalone-community/src/main/distribution/text/community/conf/neo4j.conf
@@ -17,43 +17,35 @@
 # Server configuration
 #***************************************************************
 
-# Let the webserver only listen on the specified IP. Default is localhost (only
-# accept local connections). Uncomment to allow any connection. Please see the
-# security section in the neo4j manual before modifying this.
-#org.neo4j.server.webserver.address=0.0.0.0
-
 # Whether requests to Neo4j are authenticated.
 # To disable authentication, uncomment this line:
 #dbms.security.auth_enabled=false
 
 #
-# Bolt protocol
+# Bolt connector
 #
-
-# dbms.connector group configuration
-dbms.connector.0.enabled=true
-dbms.connector.0.tls_level=OPTIONAL
-
-# Host and port for the Neo4j Bolt Protocol
+dbms.connector.bolt.type=BOLT
+dbms.connector.bolt.enabled=true
+dbms.connector.bolt.tls_level=OPTIONAL
 # To have Bolt accept non-local connections, uncomment this line:
-# dbms.connector.0.address=0.0.0.0:7687
+# dbms.connector.bolt.address=0.0.0.0:7687
 
 #
 # HTTP Connector
 #
-
-# http port (for all data, administrative, and UI access)
-org.neo4j.server.webserver.port=#{org.neo4j.webserver.port}
+dbms.connector.http.type=HTTP
+dbms.connector.http.enabled=true
+#dbms.connector.http.encryption=NONE
+# To have HTTP accept non-local connections, uncomment this line:
+#dbms.connector.http.address=0.0.0.0:#{default.http.port}
 
 #
 # HTTPS Connector
 #
-
-# Turn https-support on/off
-org.neo4j.server.webserver.https.enabled=#{org.neo4j.server.webserver.https.enabled}
-
-# https port (for all data, administrative, and UI access)
-org.neo4j.server.webserver.https.port=#{org.neo4j.webserver.https.port}
+dbms.connector.https.type=HTTP
+dbms.connector.https.enabled=true
+dbms.connector.https.encryption=TLS
+dbms.connector.https.address=localhost:#{default.https.port}
 
 # Certificate location (auto generated if the file does not exist)
 dbms.security.tls_certificate_file=#{dbms.security.tls_certificate_file}
@@ -66,7 +58,7 @@ dbms.security.tls_key_file=#{dbms.security.tls_key_file}
 # under the mountpoints specified. Uncomment this line to mount the
 # org.neo4j.examples.server.unmanaged.HelloWorldResource.java from
 # neo4j-server-examples under /examples/unmanaged, resulting in a final URL of
-# http://localhost:#{org.neo4j.webserver.port}/examples/unmanaged/helloworld/{nodeId}
+# http://localhost:#{default.http.port}/examples/unmanaged/helloworld/{nodeId}
 #dbms.unmanaged_extension_classes=org.neo4j.examples.server.unmanaged=/examples/unmanaged
 
 # Number of Neo4j worker threads.
