--- a/packaging/installer-linux/installer-rpm/installer-rpm-community/pom.xml
+++ b/packaging/installer-linux/installer-rpm/installer-rpm-community/pom.xml
@@ -34,7 +34,7 @@
 
         <buildnumber>0</buildnumber>
 
-        <neo4j.mainClass>org.neo4j.server.CommunityBootstrapper</neo4j.mainClass>
+        <neo4j.mainClass>org.neo4j.server.CommunityEntryPoint</neo4j.mainClass>
 
         <neo4j.debian.maintainer>Anders Nawroth &lt;anders@neotechnology.com&gt;</neo4j.debian.maintainer>
         <licensing.phase>none</licensing.phase>
