--- a/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
+++ b/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
@@ -100,7 +100,7 @@ org.neo4j.server.http.log.config=conf/neo4j-http-logging.xml
 #dbms.logs.gc.rotation.keep_number=5
 
 # Size of each GC log that is kept.
-#dbms.logs.rotation.gc.size=20m
+#dbms.logs.gc.rotation.size=20m
 
 # Enable this to be able to upgrade a store from an older version.
 #dbms.allow_format_migration=true
