Update settings for query.log

--- a/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
+++ b/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
@@ -71,6 +71,20 @@ dbms.security.tls_key_file=#{dbms.security.tls_key_file}
 # Number of Neo4j worker threads.
 #dbms.threads.worker_count=
 
+# Log executed queries that takes longer than the configured threshold. Enable by uncommenting this line.
+#dbms.logs.query.enabled=true
+
+# If the execution of query takes more time than this threshold, the query is logged. Defaults to 0 seconds; that is,
+# all queries are logged.
+#dbms.logs.query.threshold=0
+
+# The file size in bytes at which the query log will auto-rotate. If set to zero then no rotation will occur. Accepts a
+# binary suffix "k", "m" or "g".
+#dbms.logs.query.rotation.size=20m
+
+# Maximum number of history files for the query log.
+#dbms.logs.query.rotation.keep_number=7
+
 #*****************************************************************
 # HTTP logging configuration
 #*****************************************************************
