--- a/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
+++ b/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
@@ -74,8 +74,8 @@ dbms.security.tls_key_file=#{dbms.security.tls_key_file}
 # Log executed queries that takes longer than the configured threshold. Enable by uncommenting this line.
 #dbms.logs.query.enabled=true
 
-# If the execution of query takes more time than this threshold, the query is logged. Defaults to 0 seconds; that is,
-# all queries are logged.
+# If the execution of query takes more time than this threshold, the query is logged. If set to zero then all queries
+# are logged.
 #dbms.logs.query.threshold=0
 
 # The file size in bytes at which the query log will auto-rotate. If set to zero then no rotation will occur. Accepts a
@@ -115,6 +115,13 @@ org.neo4j.server.http.log.config=conf/neo4j-http-logging.xml
 
 # Size of each GC log that is kept.
 #dbms.logs.gc.rotation.size=20m
+
+# Size threshold for rotation of the debug log. If set to zero then no rotation will occur. Accepts a binary suffix "k",
+# "m" or "g".
+#dbms.logs.debug.rotation.size=20m
+
+# Maximum number of history files for the internal log.
+#dbms.logs.debug.rotation.keep_number=7
 
 # Enable this to be able to upgrade a store from an older version.
 #dbms.allow_format_migration=true
