Update settings for HA endpoints

--- a/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
+++ b/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
@@ -173,19 +173,19 @@ org.neo4j.server.http.log.config=conf/neo4j-http-logging.xml
 #ha.server_id=
 
 # ha.initial_hosts is a comma-separated list (without spaces) of the host:port
-# where the ha.cluster_server of all instances will be listening. Typically
+# where the ha.host.coordination of all instances will be listening. Typically
 # this will be the same for all cluster instances.
 #ha.initial_hosts=192.168.0.1:5001,192.168.0.2:5001,192.168.0.3:5001
 
 # IP and port for this instance to listen on, for communicating cluster status
 # information iwth other instances (also see ha.initial_hosts). The IP
 # must be the configured IP address for one of the local interfaces.
-#ha.cluster_server=192.168.0.1:5001
+#ha.host.coordination=192.168.0.1:5001
 
 # IP and port for this instance to listen on, for communicating transaction
 # data with other instances (also see ha.initial_hosts). The IP
 # must be the configured IP address for one of the local interfaces.
-#ha.server=192.168.0.1:6001
+#ha.host.data=192.168.0.1:6001
 
 # The interval at which slaves will pull updates from the master. Comment out
 # the option to disable periodic pulling of updates. Unit is seconds.
