Allow setting the certificates directory, but hard code the filenames.

--- a/packaging/neo4j-desktop/src/main/resources/org/neo4j/desktop/config/neo4j-default.conf
+++ b/packaging/neo4j-desktop/src/main/resources/org/neo4j/desktop/config/neo4j-default.conf
@@ -32,11 +32,8 @@ dbms.connector.http.enabled=true
 #dbms.connector.https.encryption=TLS
 #dbms.connector.https.address=localhost:#{default.https.port}
 
-# Certificate location (auto generated if the file does not exist)
-# dbms.security.tls_certificate_file=conf/ssl/snakeoil.cert
-
-# Private key location (auto generated if the file does not exist)
-# dbms.security.tls_key_file=conf/ssl/snakeoil.key
+# Certificates directory
+# dbms.directories.certificates=certificates
 
 #*****************************************************************
 # Administration client configuration
