--- a/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
+++ b/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
@@ -61,11 +61,8 @@ org.neo4j.server.webserver.https.enabled=#{org.neo4j.server.webserver.https.enab
 # https port (for all data, administrative, and UI access)
 org.neo4j.server.webserver.https.port=#{org.neo4j.webserver.https.port}
 
-# Certificate location (auto generated if the file does not exist)
-dbms.security.tls_certificate_file=#{dbms.security.tls_certificate_file}
-
-# Private key location (auto generated if the file does not exist)
-dbms.security.tls_key_file=#{dbms.security.tls_key_file}
+# Certificates directory
+dbms.directories.certificates=certificates
 
 # Comma separated list of JAX-RS packages containing JAX-RS resources, one
 # package name for each mountpoint. The listed package names will be loaded
