Address review issues of adversarial and devious pages cursors
This also fixes a bug in `NodeStore.loadRecord` that was affecting the PBI, where an inconsistent read would make a node record look like it was in use, and the loadRecord would fill it with garbage.
However, when the record decoding retried after the inconsistent read, and the record was discovered to NOT be in use, the garbage data and raised inUse flag would be left in the NodeRecord object.
The `NodeCountsProcessor` in PBI would then blow up on the left-over garbage data.

--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
     <logback-classic.version>1.1.2</logback-classic.version>
     <generate-config-docs-phase>prepare-package</generate-config-docs-phase>
     <hsqldb.version>2.3.2</hsqldb.version>
-    <test.runner.jvm.settings>-Xmx1G -XX:MaxPermSize=128M -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=target/test-data</test.runner.jvm.settings>
+    <test.runner.jvm.settings>-Xmx1G -XX:MaxPermSize=128M -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=target/test-data -XX:-OmitStackTraceInFastThrow</test.runner.jvm.settings>
     <doclint-groups>reference</doclint-groups>
     <git.commit.id.branch>unknown-branch-${project.version}</git.commit.id.branch>
     <git.commit.id>unknown-commit</git.commit.id>
