Move ConfigGenerator to internal package

--- a/community/kernel/pom.xml
+++ b/community/kernel/pom.xml
@@ -127,11 +127,11 @@ the relevant Commercial Agreement.
             <phase>${generate-config-docs-phase}</phase>
             <configuration>
               <target>
-                <java classname="org.neo4j.tooling.GenerateConfigDocumentation" classpathref="maven.test.classpath" failonerror="true">
+                <java classname="org.neo4j.kernel.configuration.docs.GenerateConfigDocumentation" classpathref="maven.test.classpath" failonerror="true">
                   <arg value="org.neo4j.graphdb.factory.GraphDatabaseSettings" />
                   <arg value="${project.build.directory}/docs/ops/configuration-attributes.asciidoc" />
                 </java>
-                <java classname="org.neo4j.tooling.GenerateConfigDocumentation" classpathref="maven.test.classpath" failonerror="true">
+                <java classname="org.neo4j.kernel.configuration.docs.GenerateConfigDocumentation" classpathref="maven.test.classpath" failonerror="true">
                   <arg value="org.neo4j.graphdb.factory.GraphDatabaseSettings$BoltConnector" />
                   <arg value="${project.build.directory}/docs/ops/configuration-attributes-bolt-connector.asciidoc" />
                 </java>
