--- a/community/dbms/pom.xml
+++ b/community/dbms/pom.xml
@@ -82,7 +82,7 @@
             <phase>${generate-config-docs-phase}</phase>
             <configuration>
               <target>
-                <java classname="org.neo4j.tooling.GenerateConfigDocumentation"
+                <java classname="org.neo4j.kernel.configuration.docs.GenerateConfigDocumentation"
                       classpathref="maven.compile.classpath" failonerror="true">
                   <arg value="org.neo4j.dbms.DatabaseManagementSystemSettings"/>
                   <arg value="${project.build.directory}/docs/ops/configuration-attributes.asciidoc"/>
