--- a/enterprise/ha/pom.xml
+++ b/enterprise/ha/pom.xml
@@ -60,7 +60,7 @@
             <phase>${generate-config-docs-phase}</phase>
             <configuration>
               <target>
-                <java classname="org.neo4j.tooling.GenerateConfigDocumentation"
+                <java classname="org.neo4j.kernel.configuration.docs.GenerateConfigDocumentation"
                       classpathref="maven.compile.classpath" failonerror="true">
                   <arg value="org.neo4j.kernel.ha.HaSettings" />
                   <arg value="${project.build.directory}/docs/ops/ha-configuration-attributes.asciidoc" />
