Add required dependencies to avoid stacktraces during tests run

--- a/enterprise/metrics/pom.xml
+++ b/enterprise/metrics/pom.xml
@@ -131,6 +131,12 @@
       <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.neo4j</groupId>
+      <artifactId>neo4j-management</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
 
     <dependency>
       <groupId>org.neo4j</groupId>
