--- a/community/pom.xml
+++ b/community/pom.xml
@@ -129,6 +129,7 @@ the relevant Commercial Agreement.
                   <excludes>
                     <exclude>org.neo4j:neo4j-cypher-frontend-3.0</exclude>
                     <exclude>org.neo4j:neo4j-cypher-frontend-2.3</exclude>
+                    <exclude>org.neo4j:neo4j-cypher-compiler-3.0</exclude>
                     <exclude>org.neo4j:neo4j-cypher-compiler-2.3</exclude>
                     <exclude>org.neo4j:neo4j-cypher-compiler-1.9_2.11</exclude>
                   </excludes>
