--- a/community/cypher/compatibility-suite/pom.xml
+++ b/community/cypher/compatibility-suite/pom.xml
@@ -73,9 +73,9 @@
     <!-- shared versions are defined in the parent pom -->
 
     <dependency>
-      <groupId>org.antlr</groupId>
-      <artifactId>antlr4</artifactId>
-      <version>4.5.1</version>
+      <groupId>org.opencypher</groupId>
+      <artifactId>tck</artifactId>
+      <version>1.0-SNAPSHOT</version>
     </dependency>
 
     <!-- cucumber -->
