Update tools and tests to use format autoselection.
Remove configuration options propagation where possible, cleanup tests.

--- a/enterprise/ha/pom.xml
+++ b/enterprise/ha/pom.xml
@@ -74,7 +74,7 @@
     </plugins>
   </build>
 
-  <>
+  <dependencies>
     <dependency>
       <groupId>org.neo4j</groupId>
       <artifactId>neo4j-enterprise-kernel</artifactId>
