Collect all Neo4j documentation into a single reference list

--- a/manual/contents/pom.xml
+++ b/manual/contents/pom.xml
@@ -251,6 +251,13 @@
       <classifier>docs</classifier>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.neo4j.doc</groupId>
+      <artifactId>neo4j-config-docs</artifactId>
+      <version>${neo4j.version}</version>
+      <classifier>docs</classifier>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
