Update core edge editions to use enterprise store format. Fix merge compilation issues.

--- a/enterprise/core-edge/pom.xml
+++ b/enterprise/core-edge/pom.xml
@@ -112,6 +112,14 @@
       </dependency>
 
       <dependency>
+          <groupId>org.neo4j</groupId>
+          <artifactId>neo4j-com</artifactId>
+          <version>${project.version}</version>
+          <type>test-jar</type>
+          <scope>test</scope>
+      </dependency>
+
+      <dependency>
         <groupId>org.neo4j</groupId>
         <artifactId>neo4j-logging</artifactId>
         <version>${project.version}</version>
