Provide default value for dbms.directories.import in neo4j.conf
We can't give a default for the import dir because of the semantics of
this setting. The setting is overloaded to turn import constraint on and
off as well as configuring which directory it's constrained to. If we
provide a default then there is no way for a user to turn the behaviour
off (if they explicitly configure it to null, say, they will just get
the default value).

So we can't provide a default at the point of definition and we can't
provide the default dynamically in the server either because that would
also leave the user with no way to turn the feature off. However it's
reasonable in the server to default this to an import directory, so
we'll do that by modifying the default neo4j.conf.

--- a/packaging/neo4j-desktop/src/main/resources/org/neo4j/desktop/config/neo4j-default.conf
+++ b/packaging/neo4j-desktop/src/main/resources/org/neo4j/desktop/config/neo4j-default.conf
@@ -2,6 +2,11 @@
 # Server configuration
 #***************************************************************
 
+# This setting constrains all `LOAD CSV` import files to be under the `import` directory. Remove or uncomment it to
+# allow files to be loaded from anywhere in filesystem; this introduces possible security problems. See the `LOAD CSV`
+# section of the manual for details.
+dbms.directories.import=import
+
 # Require (or disable the requirement of) auth to access Neo4j
 dbms.security.auth_enabled=true
 
