--- a/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
+++ b/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
@@ -6,9 +6,10 @@
 #dbms.directories.data=data
 #dbms.directories.plugins=plugins
 
-# Uncomment this line to resolve import files relative to a directory. See the
-# `LOAD CSV` section of the manual for details.
-#dbms.directories.import=import
+# This setting constrains all `LOAD CSV` import files to be under the `import` directory. Remove or uncomment it to
+# allow files to be loaded from anywhere in filesystem; this introduces possible security problems. See the `LOAD CSV`
+# section of the manual for details.
+dbms.directories.import=import
 
 # The name of the database to mount
 #dbms.active_database=graph.db
