--- a/packaging/installer-linux/installer-debian/build.xml
+++ b/packaging/installer-linux/installer-debian/build.xml
@@ -25,9 +25,46 @@
                 </fileset>
             </copy>
 
+            <copy toFile="${project.build.outputDirectory}/@{name}/server/default/neo4j">
+                <fileset dir="${project.build.sourceDirectory}/../resources/common">
+                    <include name="default-neo4j"/>
+                </fileset>
+            </copy>
+
             <replace file="${project.build.outputDirectory}/@{name}/server/conf/neo4j-wrapper.conf"
                      token="unsupported.dbms.udc.source=tarball"
                      value="unsupported.dbms.udc.source=debian"/>
+
+            <!-- Remove the files that are unnecessary, or don't make sense on Debian. -->
+            <delete file="${project.build.outputDirectory}/@{name}/server/bin/.keep"/>
+            <delete file="${project.build.outputDirectory}/@{name}/server/plugins/.keep"/>
+            <delete dir="${project.build.outputDirectory}/@{name}/server/bin/tools"/>
+
+            <!-- Set the directories to match the FHS. -->
+            <replace file="${project.build.outputDirectory}/@{name}/server/conf/neo4j.conf"
+                     token="#dbms.directories.data=data"
+                     value="dbms.directories.data=/var/lib/neo4j/data"/>
+
+            <replace file="${project.build.outputDirectory}/@{name}/server/conf/neo4j.conf"
+                     token="#dbms.directories.plugins=plugins"
+                     value="dbms.directories.plugins=/var/lib/neo4j/plugins"/>
+
+            <replace file="${project.build.outputDirectory}/@{name}/server/conf/neo4j.conf"
+                     token="#dbms.directories.import=import"
+                     value="dbms.directories.import=/var/lib/neo4j/import"/>
+
+            <concat destfile="${project.build.outputDirectory}/@{name}/server/conf/neo4j.conf"
+                    append="true">
+
+# Directory settings.
+dbms.directories.logs=/var/log/neo4j
+dbms.directories.run=/var/run/neo4j
+dbms.directories.lib=/usr/share/neo4j/lib
+dbms.directories.certificates=/var/lib/neo4j/certificates
+            </concat>
+
+            <!-- Remove the .keep directories. -->
+
 
             <chmod perm="700">
                 <fileset dir="${project.build.outputDirectory}/@{name}">
