Use the certificates directory instead of individual files.

--- a/packaging/standalone/standalone-community/src/main/distribution/text/community/conf/neo4j.conf
+++ b/packaging/standalone/standalone-community/src/main/distribution/text/community/conf/neo4j.conf
@@ -47,11 +47,8 @@ dbms.connector.https.enabled=true
 dbms.connector.https.encryption=TLS
 dbms.connector.https.address=localhost:#{default.https.port}
 
-# Certificate location (auto generated if the file does not exist)
-dbms.security.tls_certificate_file=#{dbms.security.tls_certificate_file}
-
-# Private key location (auto generated if the file does not exist)
-dbms.security.tls_key_file=#{dbms.security.tls_key_file}
+# Certificates directory
+dbms.directories.certificates=certificates
 
 # Comma separated list of JAX-RS packages containing JAX-RS resources, one
 # package name for each mountpoint. The listed package names will be loaded
